# AiStock

./: README.md  pyproject.toml  train_300.py
ai_stock/: stock_data_handler.py
ai_stocks/: __init__.py  base_stocks.py  config.py  kline_predictor.py  stock_data_handler.py  stock_handler.py  stock_info.py  stock_predictor.py  utils.py
ai_stocks/datas/: __init__.py  base_dataloader.py  operate_dataloader.py  price_dataloader.py  stock_dataloader.py
ai_stocks/models/: lstm_model.py
ai_stocks/moduls/: __init__.py  kline_module.py  lstm_module.py  operate_module.py  price_module.py  stock_module.py
ai_stocks/predictions/: __init__.py  base_predictiion.py  base_prediction.py  kline_prediction.py  operate_prediction.py  price_prediction.py  stock_prediction.py
