[tool.poetry]
name = "ai-stock"
version = "0.1.0"
description = ""
authors = ["sunjuzhong <129019668+sunjuzhong@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
akshare = "^1.15.32"
torch = "^2.5.1"
pandas = "^2.2.3"
china-stock-data = "^0.1.2"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
torchvision = "^0.20.1"
numpy = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
